# forge-unified

./: .gitignore  AGENTS.md  AUTONOMOUS_IMPROVEMENT_LOOP.md  CONTINUE_HERE.md  Cargo.toml  FEATURE-AUDIT.md  HANDOFF.md  OPENCODE-PARITY.md  PROJECT_STATE.md  README.md
.github/workflows/: app-build-proof.yml  app-multistep-build-proof.yml  build-proof.yml  ci.yml  fast-webui-proof.yml  live-webui-feature-sprint.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/engine/: Cargo.toml  build.rs
crates/engine/src/: agent.rs  agentic_run.rs  benchmark.rs  change_bus.rs  config.rs  conversation.rs  lib.rs  model_caps.rs  orchestrator.rs  provider.rs  router.rs  router_semantic.rs  safety.rs  snapshot.rs  state.rs  strategy.rs  tool.rs  tool_parts.rs  types.rs
crates/engine/src/provider/: nvidia_nim.rs  openai.rs
crates/engine/src/tool/: batch.rs  browser.rs  file_ops.rs  graph.rs  patch_apply.rs  patch_events.rs  patch_ops.rs  shell_ops.rs  task_ops.rs  web_ops.rs
crates/superapp-graph/: Cargo.toml
crates/superapp-graph/src/: path_finding.rs
crates/superapp-graph/src/ast/: mod.rs
crates/superapp-graph/src/graph/: mod.rs
crates/superapp-graph/src/mcp/: mod.rs
crates/unifiedgraph/: Cargo.toml
crates/unifiedgraph/src/: cli.rs  lib.rs  main.rs  path_finding.rs  symbol_table.rs
crates/unifiedgraph/src/extractor/: mod.rs
crates/unifiedgraph/src/skills/: mod.rs
crates/unifiedgraph/src/viz/: mod.rs
crates/unifiedgraph/templates/: graph.html
crates/webui/: Cargo.toml
crates/webui/src/: agent_benchmark.rs  change_events.rs  chat_ui.html  chat_ui.rs  chat_ui_action_pins.html  chat_ui_action_review.html  chat_ui_action_summaries.html  chat_ui_assistant_copy_source.html  chat_ui_assistant_part_summary.html  chat_ui_enhancements.html  chat_ui_error_history.html  chat_ui_error_unwrap.html  chat_ui_live_turn_ordinals.html  chat_ui_session_control_groups.html  chat_ui_session_control_keyboard.html  chat_ui_session_control_search.html  chat_ui_session_control_source_focus_trail.html  chat_ui_session_control_source_jump.html  chat_ui_session_control_source_map.html  chat_ui_session_controls.html  chat_ui_tool_lifecycle.html  chat_ui_turn_summary_strip.html  conversation_controls.rs  events.rs  events_live.rs  lib.rs  model_stack.rs  routes.rs  state.rs  ws.rs
scripts/ci/: check-file-lines.sh
scripts/nim/: model-scout.sh
scripts/proof/: browser-proof-smoke.sh
scripts/smoke/: app-build-multistep.sh  app-build-one-file.sh  capture-browser-proof.sh  check-final-report-template-contract.py  check-formatter-activation-evidence.py  check-formatter-config-activation-gap.py  check-formatter-parity.py  check-full-agentic-benchmark.py  check-live-webui-proof-manifest.py  check-live-webui-time-budget.py  check-max-step-finalization-parity.py  check-opencode-search-glob-contract.py  check-opencode-tool-lifecycle-contract.py  check-opencode-workflow-evidence.py  check-session-controls-contract.py  check-webui-proof-part-contract.py  fast-webui-proof.sh  full-agentic-benchmark-prompt.txt  live-webui-feature-sprint.sh  mvp-chat-ui-smoke.sh  natural-feature-work.sh  score-live-benchmark-quality.py  summarize-live-webui-proof.py
