[workspace]
members = [
    "crates/engine",
    "crates/webui",
    "crates/app",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/organicoverlords/forge-unified"

[workspace.dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
futures = "0.3"
rand = { version = "0.9", features = ["std_rng"] }
base64 = "0.22"
axum = { version = "0.7", features = ["ws", "json", "multipart"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
clap_verbosity_flag = { package = "clap-verbosity-flag", version = "0.3" }
jsonschema = "0.17"
glob = "0.3"
sha2 = "0.10"
parking_lot = "0.12"
dashmap = "5"
once_cell = "1"
thiserror = "1"
async-trait = "0.1"
bytes = "1"
mime = "0.3"
percent-encoding = "2"
url = "2"
dirs = "5"
urlencoding = "2"
regex = "1"