[package]
name = "forge-engine"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
jsonschema = { workspace = true }
glob = { workspace = true }
sha2 = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
mime = { workspace = true }
percent-encoding = { workspace = true }
url = { workspace = true }
dirs = { workspace = true }
urlencoding = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
image = "0.25"
unifiedgraph = { path = "../unifiedgraph" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"