[package]
name = "forge-webui"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
forge-engine = { path = "../engine" }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
clap_verbosity_flag = { workspace = true }
jsonschema = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
mime = { workspace = true }
percent-encoding = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"